--- a/booker/src/styles.scss
+++ b/booker/src/styles.scss
@@ -1,4 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import "../node_modules/@angular//material/theming";
+
+@include mat-core();
+
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: rgb(61, 61, 61); color: #fff; }
+
+
+$primary: mat-palette($mat-indigo);
+$accent: mat-palette($mat-pink, A200, A100, A400);
+
+
+a {
+  color: mat-color($accent);
+  cursor: pointer;
+  text-decoration: underline;
+}
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+a{
+  text-decoration: none;
+}
